[tool.poetry]
authors = ["Free Law Project <info@free.law>"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
description = "A library and microservice to find bad redactions in PDFs"
keywords = ["legal", "courts", "redactions"]
license = "BSD-2-Clause"
maintainers = ["Free Law Project <info@free.law>"]
name = "x-ray"
packages = [
    {include = "xray"}
]
readme = "README.md"
repository = "https://github.com/freelawproject/pdf-redaction-detector"
version = "0.3.3"

[tool.poetry.scripts]
xray = "xray.__init__:cli"

[tool.poetry.urls]
"Organisation Homepage" = "https://free.law/"

[tool.poetry.dependencies]
python = "^3.8"
PyMuPDF = "1.19.2"
requests = "^2.26.0"
types-requests = "^2.26.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
isort = "^5.10.0"
mypy = "^0.910"
pylint = "^2.7.1"
wheel = "^0.35.1"
flynt = "^0.69"
pre-commit = "^2.15.0"
ipython = "^7.29.0"

[tool.black]
include = '''.*\.pyi?$'''
line-length = 79

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
known_third_party = []
line_length = 79
multi_line_output = 3
use_parentheses = true

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "79"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
